--- a/2 Commerce/auctions/templates/auctions/listing.html
+++ b/2 Commerce/auctions/templates/auctions/listing.html
@@ -11,14 +11,13 @@
     {% endif %}
     <h2>Listing - {{ listing.title }}</h2>
     <div class="div-image">
-        {{ user.is_authenticated }}
-        {% if in_the_list %}WatchList{% endif %}
+        {% if in_the_list %}<a class="a-watch-list" href="add-to-watchlist?l={{ listing.id }}">WatchList</a>{% endif %}
         <img src="{{ listing.image_url }}" alt="">
     </div>
     <div class="div-description">
         {{ listing.description }}
     </div>
-    {% if not in_the_list and not listing.ended %}
+    {% if not in_the_list and not listing.ended and user.is_authenticated %}
     <div class="div-add-to-watchlist">
         <a class="nav-link" href="add-to-watchlist?l={{ listing.id }}">+Add To Watchlist</a>
     </div>
@@ -38,6 +37,7 @@
             {{ listing.total_bids }} bid(s) so far.
             {% if you_are_favorite %} Your bid is the current bid. {% endif %}
         </div>
+        {% if user.is_authenticated %}
         <div class="div-bid-place">
             <form method="post">
                 {% csrf_token %}
@@ -45,6 +45,7 @@
                 <input type="submit" value="Place Bid">
             </form>
         </div>
+        {% endif %}
         <h4>Details:</h4>
         <div class="div-details">
             <ul>
@@ -68,7 +69,7 @@
     {% endif %}
     <div class="div-comments">
         <h4>Comments:</h4>
-        {% if not listing.ended %}
+        {% if not listing.ended and user.is_authenticated %}
         <form action="add-comment?l={{ listing.id }}" method="post">
             {% csrf_token %}
             <textarea name="comment_text" id="comment_text" cols="50" rows="5"></textarea>
