--- a/3 Mail/mail/static/mail/styles.css
+++ b/3 Mail/mail/static/mail/styles.css
@@ -1,3 +1,17 @@
 textarea {
     min-height: 400px;
 }
+.read {
+    background-color: rgb(226, 226, 226);
+}
+.div-email-main {
+    margin:10px 3px;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    padding: 4px 10px;
+    cursor: pointer;
+}
+.div-email-main > div {
+    flex: 1
+}
