--- a/3 Mail/mail/templates/mail/layout.html
+++ b/3 Mail/mail/templates/mail/layout.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
         {% block script %}
         {% endblock %}
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
         <div class="container">
