--- a/3 Mail/mail/templates/mail/inbox.html
+++ b/3 Mail/mail/templates/mail/inbox.html
@@ -1,6 +1,10 @@
 {% extends "mail/layout.html" %}
 {% load static %}
-
+{% block head %}
+    <script>
+        let userName = "{{ user.get_username }}";
+    </script>
+{% endblock %}
 {% block body %}
     <h2>{{ request.user.email }}</h2>
 
@@ -12,6 +16,10 @@
     <hr>
 
     <div id="emails-view">
+    </div>
+
+    <div id="email-view">
+        
     </div>
 
     <div id="compose-view">
