--- a/4 Network/network/static/network/styles.css
+++ b/4 Network/network/static/network/styles.css
@@ -7,7 +7,19 @@
 }
 .div-posts {
     padding-left: 20px;
+    display: flex;
+    flex-direction: column;
 }
 .css-description {
     color: gray;
+}
+.div-edit-post {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+.hidden {
+    display: none;
 }
