like and unlike ok

--- a/4 Network/network/static/network/styles.css
+++ b/4 Network/network/static/network/styles.css
@@ -23,3 +23,17 @@
 .hidden {
     display: none;
 }
+.p-like {
+    display: flex;
+    align-content: center;
+    gap: 3px;
+}
+.po-pointer {
+    cursor: pointer;
+}
+.po-default {
+    cursor: default;
+}
+.red {
+    color: red;
+}
